--- a/src/static/index.html
+++ b/src/static/index.html
@@ -10,6 +10,6 @@
     <script src="./js/index.js" async defer type="module"></script>
   </head>
   <body>
-    <div>Example text</div>
+    <div id='root'></div>
   </body>
 </html>
