--- a/src/static/index.html
+++ b/src/static/index.html
@@ -7,9 +7,13 @@
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="./index.css" />
+    <script
+      src="https://kit.fontawesome.com/b64ffabfa5.js"
+      crossorigin="anonymous"
+    ></script>
     <script src="./js/index.js" async defer type="module"></script>
   </head>
   <body>
-    <div id='root'></div>
+    <div id="root"></div>
   </body>
 </html>
