style: handwrite font

--- a/src/static/index.html
+++ b/src/static/index.html
@@ -7,6 +7,8 @@
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="./index.css" />
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
     <script
       src="https://kit.fontawesome.com/b64ffabfa5.js"
       crossorigin="anonymous"
@@ -15,5 +17,6 @@
   </head>
   <body>
     <div id="root"></div>
+    <footer>Background from <a href="https://www.heropatterns.com/">https://www.heropatterns.com/</a></footer>
   </body>
 </html>
